using arrange to fix the sub item alignment

--- a/packages/terra-consumer-nav/src/components/nav-items/NavItem.scss
+++ b/packages/terra-consumer-nav/src/components/nav-items/NavItem.scss
@@ -30,7 +30,11 @@
   .nested {
     .link {
       .item {
-        padding-left: 60px;
+        padding-left: 48px;
+
+        .icon {
+          margin-right: 8px;
+        }
       }
 
       .icon {
